fix: Wrap excalidraw in position relative & hide scrollbars in zen mode (#3174)
* fix: wrap excalidraw in position relative so that host need not add it explicitly to fix positioning when non zero offsets

* patch version

* Hide scrollbars on excalidraw container

* remove overflow hidden from index.html since its handled in excalidraw container

* review fix

* update changelog

--- a/src/css/styles.scss
+++ b/src/css/styles.scss
@@ -8,6 +8,8 @@
 }
 
 .excalidraw {
+  position: relative;
+  overflow: hidden;
   color: var(--text-primary-color);
   display: flex;
   top: 0;
